[gd_scene load_steps=4 format=3 uid="uid://devhf8lruy1f0"]

[ext_resource type="Texture2D" uid="uid://bw43twtylh77t" path="res://ui/summer-landscape-theme_52683-42038.png" id="1_a4cvl"]
[ext_resource type="Script" path="res://levels/start_menu/Start_Menu.gd" id="2_elsui"]
[ext_resource type="Script" path="res://levels/start_menu/IsServerBtn.gd" id="3_vfco1"]

[node name="StartMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a4cvl")
script = ExtResource("2_elsui")

[node name="UI_vbox" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -125.5
offset_right = 90.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="TitleMarginContainer" type="MarginContainer" parent="UI_vbox"]
layout_mode = 2
theme_override_constants/margin_bottom = 52

[node name="TitleLbl" type="RichTextLabel" parent="UI_vbox/TitleMarginContainer"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
theme_override_colors/default_color = Color(0.0980392, 0.0980392, 1, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Steel Congo"
fit_content = true

[node name="StartBtn" type="Button" parent="UI_vbox"]
layout_mode = 2
text = "Start"

[node name="IsServerBtn" type="CheckButton" parent="UI_vbox"]
layout_mode = 2
flat = true
script = ExtResource("3_vfco1")

[connection signal="pressed" from="UI_vbox/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="toggled" from="UI_vbox/IsServerBtn" to="." method="_on_is_server_btn_toggled"]
[connection signal="toggled" from="UI_vbox/IsServerBtn" to="UI_vbox/IsServerBtn" method="_on_toggled"]
